--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 		<div class="navhead">Quip of the Day</div>
 		<div class="navfill">
 			<div class="navinfo">
-				<span class="colortext">&nbsp;bogos binted?</span>
+				<span class="colortext">&nbsp;</span>"we were bouncing all over &nbsp;the place, hitting the quan &nbsp;too"
 			</div>
 		</div>
 		<div class="navfooter"></div>
