--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 		<div class="navhead">Quip of the Day</div>
 		<div class="navfill">
 			<div class="navinfo">
-				<span class="colortext">&nbsp;today, I'm gonna be on my &nbsp;worst behaviour</span>
+				<span class="colortext">&nbsp;If you don't own at least one &nbsp;HP Lovecraft book, you dont &nbsp;deserve my attention.</span>
 			</div>
 		</div>
 		<div class="navfooter"></div>
