--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 		<div class="navhead">Quip of the Day</div>
 		<div class="navfill">
 			<div class="navinfo">
-				<span class="colortext">&nbsp;Don't you patronize me</span>
+				<span class="colortext">&nbsp;All my homies use ZSH &nbsp;terminal shell</span>
 			</div>
 		</div>
 		<div class="navfooter"></div>
