--- a/blogposts.html
+++ b/blogposts.html
@@ -70,7 +70,7 @@
 
 
 						
-			<li><a href="https://octaviomaury.github.io/blog-gaylistremoval.html">Gaylist removal and other news - 2021.27.6</a></li>
+						<!--<li><a href="https://octaviomaury.github.io/blog-gaylistremoval.html">Gaylist removal and other news - 2021.27.6</a></li>-->
 			<li><a href="https://octaviomaury.github.io/blog-domainname.html">octaviomaury.com domain name - 2021.13.6</a></li>
 			<li><a href="https://octaviomaury.github.io/blog-movieportalup.html">The Movie Portal is Up! - 2021.22.5</a></li>
 			<li><a href="https://octaviomaury.github.io/blog-blogpostarchive.html">Blog Post Archive - 2021.13.5</a></li>
