--- a/gaylist.html
+++ b/gaylist.html
@@ -6,6 +6,7 @@
   <link href="military/themecss.css" rel="stylesheet" type="text/css" media="all">
   <link rel="icon" type="image/png" href="images/pfp.png">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <META NAME=”ROBOTS” CONTENT=”NOINDEX, NOFOLLOW”>
 </head>
 
 <div id="bodycontainer">
