--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 		<div class="navhead">Quip of the Day</div>
 		<div class="navfill">
 			<div class="navinfo">
-				<span class="colortext">&nbsp;All my homies use ZSH &nbsp;terminal shell</span>
+				<span class="colortext">&nbsp;DON'T LOOK AT MY FEET</span>
 			</div>
 		</div>
 		<div class="navfooter"></div>
