--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 		<div class="navhead">Quip of the Day</div>
 		<div class="navfill">
 			<div class="navinfo">
-				<span class="colortext">&nbsp;Beasts all over the shop..</span>
+				<span class="colortext">&nbsp;"They glow in the dark, you &nbsp;can see 'em if you're &nbsp;driving"</span>
 			</div>
 		</div>
 		<div class="navfooter"></div>
