--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 		<div class="navhead">Quip of the Day</div>
 		<div class="navfill">
 			<div class="navinfo">
-				<span class="colortext">&nbsp;IDE? Is that a Vim plugin?</span>
+				<span class="colortext">&nbsp;too much word, no read</span>
 			</div>
 		</div>
 		<div class="navfooter"></div>
