--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 		<div class="navhead">Quip of the Day</div>
 		<div class="navfill">
 			<div class="navinfo">
-				<span class="colortext">&nbsp;worms are good!</span>
+				<span class="colortext">&nbsp;women drinking retard juice</span>
 			</div>
 		</div>
 		<div class="navfooter"></div>
