--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 		<div class="navhead">Quip of the Day</div>
 		<div class="navfill">
 			<div class="navinfo">
-				<span class="colortext">&nbsp;Don't worry son, these &nbsp;things happen.</span>
+				<span class="colortext">&nbsp;yo i'm casey</span>
 			</div>
 		</div>
 		<div class="navfooter"></div>
