--- a/blogposts.html
+++ b/blogposts.html
@@ -61,7 +61,7 @@
 
     <div class="topicmenu">
   		<div class="toptop">
-  			<div class="topictitle">Blog Posts - 2021.27.6</div>
+  			<div class="topictitle">Blog Posts - 2021.18.8</div>
   		</div>
   			<div class="topicmid">
   				<div class="topicinfo">
@@ -70,6 +70,7 @@
 
 
 						
+						<li><a href="https://octaviomaury.github.io/blog-direction.html">The direction this site is headed - 2021.18.8</a></li>
 						<!--<li><a href="https://octaviomaury.github.io/blog-gaylistremoval.html">Gaylist removal and other news - 2021.27.6</a></li>-->
 			<li><a href="https://octaviomaury.github.io/blog-domainname.html">octaviomaury.com domain name - 2021.13.6</a></li>
 			<li><a href="https://octaviomaury.github.io/blog-movieportalup.html">The Movie Portal is Up! - 2021.22.5</a></li>
