--- a/art.html
+++ b/art.html
@@ -67,6 +67,7 @@
   				<div class="topicinfo">
 						
 					
+	&nbsp;<a href="https://octaviomaury.github.io/artportalracistmode.html"><img src="images/artportal/racistmodeicon.png" height="100"></a>
 	&nbsp;<a href="https://octaviomaury.github.io/artportalpixeldump.html"><img src="images/artportal/pixelartdump/pixelicon.png" height="100"></a>
 	&nbsp;<a href="https://octaviomaury.github.io/artportalbackatitagain.html"><img src="images/artportal/atitagainicon.png" height="100"></a>
 	&nbsp;<a href="https://octaviomaury.github.io/artportalfatherson-bonding.html"><img src="images/artportal/fathersonicon.png" height="100"></a>
