--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
  	 			        <li><a href=" https://octaviomaury.github.io/cartoons.html ">Movie Portal</a></li>
 					<li><a href=" https://octaviomaury.github.io/art.html ">Art Portal</a></li>
 					<li><a href=" https://octaviomaury.github.io/about.html ">About</a></li>
-					<li><a href="https://octaviomaury.github.io/blogposts.html">Blog Posts</a></li>
 				</ul>
 			</div>
 		</div>
@@ -43,37 +42,13 @@
 	</div>
 
 
-	<div class="navbox">
-		<div class="navhead">Links</div> <div class="navfill"> <div class="navinfo"> <div class="nav-menu">
-				<ul>
-					<li><a href="https://octo.newgrounds.com/" target="_new">Newgrounds</a></li>
-					<li><a href="https://www.youtube.com/channel/UC4ud3m2IHZ0P1o7UNg6cPMA" target="_new">Youtube</a></li>
-				</ul>
-			</div>
-		</div>
-		</div>
-		<div class="navfooter"></div>
-	</div>
 		
-	<div class="navbox">
-		<div class="navhead">RSS</div>
-		<div class="navfill">
-		<div class="navinfo">
-			<div class="nav-menu">
-				<ul>
-					<li><a href="https://octaviomaury.com/feeds/octaviomaury-blog.xml">Blog RSS</a></li>
-				</ul>
-			</div>
-		</div>
-		</div>
-		<div class="navfooter"></div>
-	</div>
 
 	<div class="navbox">
-		<div class="navhead">Quip of the Day</div>
+		<div class="navhead">Quip of the whenever</div>
 		<div class="navfill">
 			<div class="navinfo">
-				<span class="colortext">&nbsp;Don't you got some shoes to shine?</span>
+				<span class="colortext">&nbsp;I slipped on a banana peel &nbsp;last week.</span>
 			</div>
 		</div>
 		<div class="navfooter"></div>
@@ -88,44 +63,11 @@
 	
 	<div class="topicmenu">
                 <div class="toptop">
-                        <div class="topictitle">The direction this site is headed</div>
+                        <div class="topictitle">nothin here right now lol</div>
                 </div>
                         <div class="topicmid">
                                 <div class="topicinfo">
-					&nbsp; I haven't really done much on here in a while as far as blog posts or Quips go. The reason for that is
-					that when you have a website named with your full, real name, it's kinda hard to get away with a lotta stuff without
-					getting anyone mad at you, <!--Part of the reason I removed the gaylist-->  so, for the most part, I've decided this site is
-					going to be a portfolio, art-only type of deal. I'm not gonna be doing many more blog posts, im gonna just do art and stuff on here.
-					of course, blog posts are fun so I've kinda been more active on a different site that I'm running now.(lol I wont tell ya what it is)
-					aside from slowing down the blogs, I'm also kinda unhappy with how the site LOOKS and how I've set everything up, so depending on if
-					I'm lazy or not, you may see a massive re-design sometime in the future. If you talked to me at all during the development of this site,
-					you would know that I didnt actually write the CSS myself, and this is actually a free site template I downloaded. Very cringe.
-					So, yeah. If you wannna know the domain for the new site I'm running you're gonna need to reach out to me and you gotta know me personally, 
-					as it's not exactly something I want tied to my name. I wanna keep it mostly anonymous.<br>
-					<b>TL;DR</b><br>
-					I'm gonna be keeping this site nice and politically correct <!--cringe!--> while I post my funny stuff on a secret other site, and I might
-					redesign this site completely at some point.<br><br>			<img src="images/theboys.png" alt="computer" height="300">
-				<br><br>
-				&nbsp;Thats about it.
-				<br><br>
-            &nbsp;Cheers.
-
-                                        </div>
-                                <div class="topicsignature">Octo-</div>
-                        </div>
-                <div class="topicfoot"></div>
-	<div class="topicmenu">
-                <div class="toptop">
-                        <div class="topictitle">octaviomaury.com domain name - 2021.13.6</div>
-                </div>
-                        <div class="topicmid">
-                                <div class="topicinfo">
-					&nbsp; I am now the proud owner of the <span class="colortext">octaviomaury.com</span> domain,
-					no silly .github.io shit. I'm surprised how cheap I &nbsp;got it for, actually, it was &nbsp;only 8$/year.
-					SO from now on, just go to <span class="colortext">octaviomaury.com</span> for all your octo-related &nbsp;needs.			
-					<br><br>			<img src="images/computer-01.gif" alt="computer" height="300">
-				<br><br>
-				&nbsp;Thats about it.
+<iframe width="560" height="315" src="https://www.youtube.com/embed/FIiYZ22vO9s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 				<br><br>
             &nbsp;Cheers.
 
@@ -134,42 +76,8 @@
                         </div>
                 <div class="topicfoot"></div>
 
-	<div class="topicmenu">
-                <div class="toptop">
-                        <div class="topictitle">The Movie Portal is Up! - 2021.22.5</div>
-                </div>
-                        <div class="topicmid">
-                                <div class="topicinfo">
-				&nbsp; The Movie Portal is up. Actually, its been done since last night but I was too tired
-				to write a blog post about it. &nbsp;I'm gonna be postin animations and stuff as well as whatever
-				I feel like lol. Last night I put up <a href="https://octaviomaury.github.io/movieportalhelloworld.html"
-				target="blank">this video</a> where &nbsp;I run a C script. It's pretty cool.
-				<br><br>
-				&nbsp;In other news, I got a job at a burger place, so hopefully I can start buying cool things
-				 like skating gear or a &nbsp;new computer.
-				 <br><br>
-				<img src="images/kitchen.png" alt="RR-kitchen" height="300">
-				<br><br>
-				&nbsp;Thats about it.
-				<br><br>
-            &nbsp;Cheers.
-
-                                        </div>
-                                <div class="topicsignature">Octo-</div>
-                        </div>
-                <div class="topicfoot"></div>
-        </div>
- <div class="topicmenu">
-                </div>
 
         </div>
-
-
-
-
-
-
-
   </div>
 
 
