--- a/index.html
+++ b/index.html
@@ -6,82 +6,8 @@
   <link href="themecss.css" rel="stylesheet" type="text/css" media="all">
   <link rel="icon" type="image/png" href="images/pfp.png">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!--thanks andy for my 404 page kekekekek-->
-    <style>
- .colortext {
-   color:#8d8d6A;
- }
-</style>
-<META NAME=”ROBOTS” CONTENT=”NOINDEX, NOFOLLOW”>
-</head>
-
-<div id="bodycontainer">
-
-
-<div id="banner">
-	<div class="bannertitle">Octavio Maury's Website</div>
-</div>
-
-<div id="COL-left">
-
-	<div class="navbox">
-		<div class="navhead">Navigation</div>
-		<div class="navfill">
-		<div class="navinfo">
-			<div class="nav-menu">
-				<ul>
-					<li><a href=" https://octaviomaury.github.io/index.html ">Home</a></li>
- 	 			        <li><a href=" https://octaviomaury.github.io/cartoons.html ">Movie Portal</a></li>
-					<li><a href=" https://octaviomaury.github.io/art.html ">Art Portal</a></li>
-					<li><a href=" https://octaviomaury.github.io/about.html ">About</a></li>
-				</ul>
-			</div>
-		</div>
-		</div>
-		<div class="navfooter"></div>
-	</div>
-
-
-		
-
-	<div class="navbox">
-		<div class="navhead">Quip of the whenever</div>
-		<div class="navfill">
-			<div class="navinfo">
-				<span class="colortext">&nbsp;I slipped on a banana peel &nbsp;last week.</span>
-			</div>
-		</div>
-		<div class="navfooter"></div>
-	</div>
-
-
-</div>
-
-
-
-<div id="COL-right">
-	
-	<div class="topicmenu">
-                <div class="toptop">
-                        <div class="topictitle">nothin here right now lol</div>
-                </div>
-                        <div class="topicmid">
-                                <div class="topicinfo">
-<iframe width="560" height="315" src="https://www.youtube.com/embed/FIiYZ22vO9s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-				<br><br>
-            &nbsp;Cheers.
-
-                                        </div>
-                                <div class="topicsignature">Octo-</div>
-                        </div>
-                <div class="topicfoot"></div>
-
-
-        </div>
-  </div>
-
-
-  <div class="clearB"></div>
-
-
-  <div class="foot"></div>
+	</head>
+	<body>
+		<h1>UNDER CONSTRUCTION</h1>
+	</body>
+</html>
