--- a/index.html
+++ b/index.html
@@ -1,13 +1,215 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr"><head>
-<meta http-equiv="content-type" content="text/html; charset=UTF-8">
-  <meta charset="utf-8">
-  <title>Octavio Maury</title>
-  <link href="themecss.css" rel="stylesheet" type="text/css" media="all">
-  <link rel="icon" type="image/png" href="images/pfp.png">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-	</head>
-	<body>
-		<h1>UNDER CONSTRUCTION</h1>
-	</body>
-</html>
+<!-- ============================================ -->
+<!--                   Gallery                    -->
+<!-- ============================================ -->
+
+<head>
+	<link rel="stylesheet" href="css/style.css">
+</head>
+
+<section id="gallery-404">
+    <div class="cs-container">
+        <div class="cs-content">
+            <div class="cs-flex">
+                <span class="cs-topper">MY PORTFOLIO</span>
+                <h2 class="cs-title">Some works I've made in the past</h2>
+            </div>
+        </div>
+        <div class="cs-gallery-wrapper">
+            <!--Gallery 1-->
+        <div class="cs-gallery" data-category="one">
+            <!--Picture 1-->
+            <picture class="cs-image">
+                <source media="(max-width: 600px)" srcset="imgs/celestialbodies.jpg">
+                <source media="(min-width: 601px)" srcset="imgs/celestialbodies.jpg">
+                <img loading="lazy" decoding="async" src="imgs/celestialbodies.jpg" alt="gallery" width="630" height="400">
+            </picture>
+            <!--Picture 2-->
+            <picture class="cs-image">
+                <source media="(max-width: 600px)" srcset="imgs/lost2.jpg">
+                <source media="(min-width: 601px)" srcset="imgs/lost2.jpg">
+                <img loading="lazy" decoding="async" src="imgs/lost2.jpg" alt="gallery" width="305" height="400">
+            </picture>
+            <!--Picture 3-->
+            <picture class="cs-image">
+                <source media="(max-width: 600px)" srcset="imgs/mountains.jpg">
+                <source media="(min-width: 601px)" srcset="imgs/mountains.jpg">
+                <img loading="lazy" decoding="async" src="imgs/mountains.jpg" alt="gallery" width="305" height="400">
+            </picture>
+            <!--Picture 4-->
+            <picture class="cs-image">
+                <source media="(max-width: 600px)" srcset="imgs/milk.jpg">
+                <source media="(min-width: 601px)" srcset="imgs/milk.jpg">
+                <img loading="lazy" decoding="async" src="imgs/milk.jpg" alt="gallery" width="305" height="400">
+            </picture>
+            <!--Picture 5-->
+            <picture class="cs-image">
+                <source media="(max-width: 600px)" srcset="imgs/rbpage1.jpg">
+                <source media="(min-width: 601px)" srcset="imgs/rbpage1.jpg">
+                <img loading="lazy" decoding="async" src="imgs/rbpage1.jpg" alt="gallery" width="305" height="400">
+            </picture>
+            <!--Picture 6-->
+            <picture class="cs-image">
+                <source media="(max-width: 600px)" srcset="imgs/rbpageguy.png">
+                <source media="(min-width: 601px)" srcset="imgs/rbpageguy.png">
+                <img loading="lazy" decoding="async" src="imgs/rbpageguy.png" alt="gallery" width="630" height="400">
+            </picture>
+        </div>
+        <!--Gallery 2-->
+        <div class="cs-gallery cs-hidden" data-category="two">
+            <!--Picture 1-->
+            <picture class="cs-image">
+                <source media="(max-width: 600px)" srcset="imgs/milk.jpg">
+                <source media="(min-width: 601px)" srcset="imgs/milk.jpg">
+                <img loading="lazy" decoding="async" src="imgs/milk.jpg" alt="gallery" width="305" height="400">
+            </picture>
+            <!--Picture 2-->
+            <picture class="cs-image">
+                <source media="(max-width: 600px)" srcset="imgs/rbpage1.jpg">
+                <source media="(min-width: 601px)" srcset="imgs/rbpage1.jpg">
+                <img loading="lazy" decoding="async" src="imgs/rbpage1.jpg" alt="gallery" width="305" height="400">
+            </picture>
+            <!--Picture 3-->
+            <picture class="cs-image">
+                <source media="(max-width: 600px)" srcset="imgs/rbpage2.jpg">
+                <source media="(min-width: 601px)" srcset="imgs/rbpage2.jpg">
+                <img loading="lazy" decoding="async" src="imgs/rbpage2.jpg" alt="gallery" width="630" height="400">
+            </picture>
+            <!--Picture 4-->
+            <picture class="cs-image">
+                <source media="(max-width: 600px)" srcset="imgs/celestialbodies.jpg">
+                <source media="(min-width: 601px)" srcset="imgs/celestialbodies.jpg">
+                <img loading="lazy" decoding="async" src="imgs/celestialbodies.jpg" alt="gallery" width="630" height="400">
+            </picture>
+            <!--Picture 5-->
+            <picture class="cs-image">
+                <source media="(max-width: 600px)" srcset="imgs/lost2.jpg">
+                <source media="(min-width: 601px)" srcset="imgs/lost2.jpg">
+                <img loading="lazy" decoding="async" src="imgs/lost2.jpg" alt="gallery" width="305" height="400">
+            </picture>
+            <!--Picture 6-->
+            <picture class="cs-image">
+                <source media="(max-width: 600px)" srcset="imgs/mountains.jpg">
+                <source media="(min-width: 601px)" srcset="imgs/mountains.jpg">
+                <img loading="lazy" decoding="async" src="imgs/mountains.jpg" alt="gallery" width="305" height="400">
+            </picture>
+        </div>
+        <!--Gallery 3-->
+        <div class="cs-gallery cs-hidden" data-category="three">
+            <!--Picture 1-->
+            <picture class="cs-image">
+                <source media="(max-width: 600px)" srcset="imgs/mountains.jpg">
+                <source media="(min-width: 601px)" srcset="imgs/mountains.jpg">
+                <img loading="lazy" decoding="async" src="imgs/mountains.jpg" alt="gallery" width="305" height="400">
+            </picture>
+            <!--Picture 2-->
+            <picture class="cs-image">
+                <source media="(max-width: 600px)" srcset="imgs/milk.jpg">
+                <source media="(min-width: 601px)" srcset="imgs/milk.jpg">
+                <img loading="lazy" decoding="async" src="imgs/milk.jpg" alt="gallery" width="305" height="400">
+            </picture>
+            <!--Picture 3-->
+            <picture class="cs-image">
+                <source media="(max-width: 600px)" srcset="imgs/celestialbodies.jpg">
+                <source media="(min-width: 601px)" srcset="imgs/celestialbodies.jpg">
+                <img loading="lazy" decoding="async" src="imgs/celestialbodies.jpg" alt="gallery" width="630" height="400">
+            </picture>
+            <!--Picture 4-->
+            <picture class="cs-image">
+                <source media="(max-width: 600px)" srcset="imgs/lost2.jpg">
+                <source media="(min-width: 601px)" srcset="imgs/lost2.jpg">
+                <img loading="lazy" decoding="async" src="imgs/lost2.jpg" alt="gallery" width="305" height="400">
+            </picture>
+            <!--Picture 5-->
+            <picture class="cs-image">
+                <source media="(max-width: 600px)" srcset="imgs/rbpage1.jpg">
+                <source media="(min-width: 601px)" srcset="imgs/rbpage1.jpg">
+                <img loading="lazy" decoding="async" src="imgs/rbpage1.jpg" alt="gallery" width="305" height="400">
+            </picture>
+            <!--Picture 6-->
+            <picture class="cs-image">
+                <source media="(max-width: 600px)" srcset="imgs/rbpage2.jpg">
+                <source media="(min-width: 601px)" srcset="imgs/rbpage2.jpg">
+                <img loading="lazy" decoding="async" src="imgs/rbpage2.jpg" alt="gallery" width="630" height="400">
+            </picture>
+        </div>
+        <!--Gallery 4-->
+        <div class="cs-gallery cs-hidden" data-category="four">
+            <!--Picture 1-->
+            <picture class="cs-image">
+                <source media="(max-width: 600px)" srcset="imgs/celestialbodies.jpg">
+                <source media="(min-width: 601px)" srcset="imgs/celestialbodies.jpg">
+                <img loading="lazy" decoding="async" src="imgs/celestialbodies.jpg" alt="gallery" width="630" height="400">
+            </picture>
+            <!--Picture 2-->
+            <picture class="cs-image">
+                <source media="(max-width: 600px)" srcset="imgs/rbpage1.jpg">
+                <source media="(min-width: 601px)" srcset="imgs/rbpage1.jpg">
+                <img loading="lazy" decoding="async" src="imgs/rbpage1.jpg" alt="gallery" width="305" height="400">
+            </picture>
+            <!--Picture 3-->
+            <picture class="cs-image">
+                <source media="(max-width: 600px)" srcset="imgs/rbpage2.jpg">
+                <source media="(min-width: 601px)" srcset="imgs/rbpage2.jpg">
+                <img loading="lazy" decoding="async" src="imgs/rbpage2.jpg" alt="gallery" width="630" height="400">
+            </picture>
+            <!--Picture 4-->
+            <picture class="cs-image">
+                <source media="(max-width: 600px)" srcset="imgs/lost2.jpg">
+                <source media="(min-width: 601px)" srcset="imgs/lost2.jpg">
+                <img loading="lazy" decoding="async" src="imgs/lost2.jpg" alt="gallery" width="305" height="400">
+            </picture>
+            <!--Picture 5-->
+            <picture class="cs-image">
+                <source media="(max-width: 600px)" srcset="imgs/mountains.jpg">
+                <source media="(min-width: 601px)" srcset="imgs/mountains.jpg">
+                <img loading="lazy" decoding="async" src="imgs/mountains.jpg" alt="gallery" width="305" height="400">
+            </picture>
+            <!--Picture 6-->
+            <picture class="cs-image">
+                <source media="(max-width: 600px)" srcset="imgs/milk.jpg">
+                <source media="(min-width: 601px)" srcset="imgs/milk.jpg">
+                <img loading="lazy" decoding="async" src="imgs/milk.jpg" alt="gallery" width="305" height="400">
+            </picture>
+        </div>
+        <!--Gallery 5-->
+        <div class="cs-gallery cs-hidden" data-category="five">
+            <!--Picture 1-->
+            <picture class="cs-image">
+                <source media="(max-width: 600px)" srcset="imgs/celestialbodies.jpg">
+                <source media="(min-width: 601px)" srcset="imgs/celestialbodies.jpg">
+                <img loading="lazy" decoding="async" src="imgs/celestialbodies.jpg" alt="gallery" width="630" height="400">
+            </picture>
+            <!--Picture 2-->
+            <picture class="cs-image">
+                <source media="(max-width: 600px)" srcset="imgs/milk.jpg">
+                <source media="(min-width: 601px)" srcset="imgs/milk.jpg">
+                <img loading="lazy" decoding="async" src="imgs/milk.jpg" alt="gallery" width="305" height="400">
+            </picture>
+            <!--Picture 3-->
+            <picture class="cs-image">
+                <source media="(max-width: 600px)" srcset="imgs/lost2.jpg">
+                <source media="(min-width: 601px)" srcset="imgs/lost2.jpg">
+                <img loading="lazy" decoding="async" src="imgs/lost2.jpg" alt="gallery" width="305" height="400">
+            </picture>
+            <!--Picture 4-->
+            <picture class="cs-image">
+                <source media="(max-width: 600px)" srcset="imgs/mountains.jpg">
+                <source media="(min-width: 601px)" srcset="imgs/mountains.jpg">
+                <img loading="lazy" decoding="async" src="imgs/mountains.jpg" alt="gallery" width="305" height="400">
+            </picture>
+            <!--Picture 5-->
+            <picture class="cs-image">
+                <source media="(max-width: 600px)" srcset="imgs/rbpage1.jpg">
+                <source media="(min-width: 601px)" srcset="imgs/rbpage1.jpg">
+                <img loading="lazy" decoding="async" src="imgs/rbpage1.jpg" alt="gallery" width="305" height="400">
+            </picture>
+            <!--Picture 6-->
+            <picture class="cs-image">
+                <source media="(max-width: 600px)" srcset="imgs/rbpage2.jpg">
+                <source media="(min-width: 601px)" srcset="imgs/rbpage2.jpg">
+                <img loading="lazy" decoding="async" src="imgs/rbpage2.jpg" alt="gallery" width="630" height="400">
+            </picture>
+        </div>
+        </div>
+    </div>
+</section>
