--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
 <head>
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="icon" type="image/png" href="images/favicon1.png">
 </head>
 
 <section id="gallery-404">
