--- a/index.html
+++ b/index.html
@@ -1,10 +1,6 @@
-<!-- ============================================ -->
-<!--                   Gallery                    -->
-<!-- ============================================ -->
-
 <head>
 	<link rel="stylesheet" href="css/style.css">
-	<link rel="icon" type="image/png" href="images/favicon1.png">
+	<link rel="icon" type="image/png" href="imgs/favicon1.png">
 </head>
 
 <section id="gallery-404">
@@ -212,5 +208,6 @@
             </picture>
         </div>
         </div>
+	<p>Drawings by Octavio Maury. Wassup world! Shoot me an email: octaviomaury1@gmail.com<br><br>Site still under construction!</p>
     </div>
 </section>
